--- a/testexmC++/testexmC++/testexmC++.vcxproj
+++ b/testexmC++/testexmC++/testexmC++.vcxproj
@@ -141,6 +141,10 @@
   <ItemGroup>
     <ClCompile Include="testexmC++.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="classes.h" />
+    <ClInclude Include="managers.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
