--- a/testexmC++/testexmC++/testexmC++.vcxproj.filters
+++ b/testexmC++/testexmC++/testexmC++.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="classes.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="managers.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
